--- a/all_data_unique_h5/read_info.ipynb
+++ b/all_data_unique_h5/read_info.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = h5py.File(\"mdcath_analysis_0.h5\", 'r')\n",
+    "data = h5py.File(\"mdcath_analysis.h5\", 'r')\n",
     "print(f\"Total number of samples: {len(data.keys())}\")"
    ]
   },
