update with box plot and ca_indices selection from pdbproteinatoms

--- a/analysis/note.ipynb
+++ b/analysis/note.ipynb
@@ -30,9 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdbid = '1bg6A01'\n",
+    "pdbid = '3al9A02'\n",
     "f = h5.File(f\"/workspace3/mdCATH_final/mdcath_dataset_{pdbid}.h5\", 'r')\n",
-    "sim_name = '348'\n",
+    "sim_name = '450'\n",
     "repl = 1\n",
     "print(f'keys:{f.keys()}')\n",
     "print(f'attrs:{f.attrs[\"layout\"]}')"
@@ -67,6 +67,19 @@
    "source": [
     "print(f\"z.shape --> {f[pdbid]['z'].shape}\")\n",
     "print(f\"z --> {f[pdbid]['z'][:10]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# recover idxs of Ca from pdbProteinAtoms\n",
+    "pdbProteinAtoms = f[pdbid]['pdbProteinAtoms'][()].decode('utf-8').split('\\n')[1:-3] # remove header and footer\n",
+    "atomtypes = [line.split()[2] for line in pdbProteinAtoms]\n",
+    "ca_indices = np.where(np.array(atomtypes) == 'CA')[0]\n",
+    "print(f'Number of CA atoms: {len(ca_indices)}')"
    ]
   },
   {
@@ -252,8 +265,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coords = f[pdbid][sim_name][str(repl)][\"coords\"]\n",
-    "forces = f[pdbid][sim_name][str(repl)][\"forces\"]\n",
+    "coords = f[pdbid][sim_name][str(1)][\"coords\"]#[:,ca_indices,:]\n",
+    "forces = f[pdbid][sim_name][str(1)][\"forces\"]#[:,ca_indices,:]\n",
     "print(f'coords --> {coords.shape}, units: {f[pdbid][sim_name][\"0\"][\"coords\"].attrs[\"unit\"]}')\n",
     "print(f'forces --> {forces.shape}, units: {f[pdbid][sim_name][\"0\"][\"forces\"].attrs[\"unit\"]}')"
    ]
@@ -264,16 +277,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def plot_box(box, ax, origin=[0, 0, 0]):\n",
+    "    from mpl_toolkits.mplot3d.art3d import Poly3DCollection, Line3DCollection\n",
+    "    \n",
+    "    # Compute original vertices centered at the origin\n",
+    "    vertices = np.array([[-box[0][0]/2, -box[1][1]/2, -box[2][2]/2],\n",
+    "                        [box[0][0]/2, -box[1][1]/2, -box[2][2]/2],\n",
+    "                        [-box[0][0]/2, box[1][1]/2, -box[2][2]/2],\n",
+    "                        [box[0][0]/2, box[1][1]/2, -box[2][2]/2],\n",
+    "                        [-box[0][0]/2, -box[1][1]/2, box[2][2]/2],\n",
+    "                        [box[0][0]/2, -box[1][1]/2, box[2][2]/2],\n",
+    "                        [-box[0][0]/2, box[1][1]/2, box[2][2]/2],\n",
+    "                        [box[0][0]/2, box[1][1]/2, box[2][2]/2]])\n",
+    "\n",
+    "    # Translate vertices to make the box center at 'origin'\n",
+    "    vertices = vertices + origin\n",
+    "\n",
+    "    # List of sides' vertices indices\n",
+    "    edges = [\n",
+    "        [vertices[0], vertices[1], vertices[3], vertices[2]],  # Bottom face\n",
+    "        [vertices[4], vertices[5], vertices[7], vertices[6]],  # Top face\n",
+    "        [vertices[0], vertices[1], vertices[5], vertices[4]],  # Front face\n",
+    "        [vertices[2], vertices[3], vertices[7], vertices[6]],  # Back face\n",
+    "        [vertices[0], vertices[2], vertices[6], vertices[4]],  # Left face\n",
+    "        [vertices[1], vertices[3], vertices[7], vertices[5]]   # Right face\n",
+    "    ]\n",
+    "\n",
+    "    # Create a 3D polygon collection for the faces\n",
+    "    faces = Poly3DCollection(edges, linewidths=1, edgecolors='k', alpha=0.1)\n",
+    "    ax.add_collection3d(faces)\n",
+    "\n",
+    "    # Plot the vertices\n",
+    "    ax.scatter(vertices[:, 0], vertices[:, 1], vertices[:, 2], s=5, color='r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
+    "box = f[pdbid][sim_name][str(repl)][\"box\"][:] * 10\n",
     "init_coords = coords[0]\n",
+    "init_coords_barycenter = np.mean(init_coords, axis=0)\n",
     "end_coords = coords[-1]\n",
+    "end_coords_barycenter = np.mean(end_coords, axis=0)\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(121, projection='3d')\n",
     "ax.set_title('Initial Coordinates')\n",
-    "ax.scatter(init_coords[:,0], init_coords[:,1], init_coords[:,2], s=1)\n",
+    "ax.scatter(init_coords[:,0], init_coords[:,1], init_coords[:,2], s=2)\n",
+    "plot_box(box, ax, init_coords_barycenter)\n",
     "ax1 = fig.add_subplot(122, projection='3d')\n",
     "ax1.set_title('Final Coordinates')\n",
-    "ax1.scatter(end_coords[:,0], end_coords[:,1], end_coords[:,2], s=1)\n",
+    "ax1.scatter(end_coords[:,0], end_coords[:,1], end_coords[:,2], s=2)\n",
+    "plot_box(box, ax1, end_coords_barycenter)\n",
     "plt.show()"
    ]
   },
