--- a/analysis/note.ipynb
+++ b/analysis/note.ipynb
@@ -30,10 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdbid = '3al9A02'\n",
+    "pdbid = '1cukA01'\n",
     "f = h5.File(f\"/workspace3/mdCATH_final/mdcath_dataset_{pdbid}.h5\", 'r')\n",
-    "sim_name = '450'\n",
-    "repl = 1\n",
+    "#f = h5.File(f\"/workspace7/antoniom/noh_mdCATH/mdcath_noh_dataset_{pdbid}.h5\", 'r')\n",
+    "sim_name = '348'\n",
+    "repl = '0'\n",
     "print(f'keys:{f.keys()}')\n",
     "print(f'attrs:{f.attrs[\"layout\"]}')"
    ]
@@ -54,6 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(pdbid)\n",
     "print(f\"numChains --> {f[pdbid].attrs['numChains']}\")\n",
     "print(f\"numProteinAtoms --> {f[pdbid].attrs['numProteinAtoms']}\")\n",
     "print(f\"numResidues --> {f[pdbid].attrs['numResidues']}\")"
@@ -139,6 +141,26 @@
    "source": [
     "for replattr in f[pdbid][sim_name][str(repl)].attrs.keys():\n",
     "    print(f'{replattr} --> {f[pdbid][sim_name][str(repl)].attrs[replattr]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skipframes = 2\n",
+    "conf_idx =  f[pdbid][sim_name][str(repl)]['coords'].shape[0] -1 \n",
+    "print(f'conf_idx --> {conf_idx}')\n",
+    "z = f[pdbid][\"z\"][:]\n",
+    "coords = np.zeros((z.shape[0], 3))\n",
+    "forces = np.zeros((z.shape[0], 3))\n",
+    "slice_idxs = np.s_[conf_idx:conf_idx+1]\n",
+    "group = f[f\"{pdbid}/{sim_name}/{repl}\"]\n",
+    "group['coords'].read_direct(coords, slice_idxs)\n",
+    "group['forces'].read_direct(forces, slice_idxs)\n",
+    "print(f'coords --> {coords.shape}')\n",
+    "print(f'forces --> {forces.shape}')"
    ]
   },
   {
@@ -383,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
