--- a/process/read_info.ipynb
+++ b/process/read_info.ipynb
@@ -7,8 +7,9 @@
    "outputs": [],
    "source": [
     "import h5py \n",
+    "import numpy as np\n",
     "from os.path import join as opj\n",
-    "import numpy as np"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -25,7 +26,7 @@
     }
    ],
    "source": [
-    "file_name = \"/shared/antoniom/buildCATHDataset/all_data_unique_h5/mdcath_analysis.h5\"\n",
+    "file_name = \"mdcath_analysis.h5\"\n",
     "data = h5py.File(file_name, 'r')\n",
     "print(f\"Total number of samples: {len(data.keys())}\")"
    ]
@@ -183,8 +184,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "fig, axs = plt.subplots(1, 4, figsize=(25, 5))\n",
     "if 'mdcath_analysis' in file_name:\n",
     "    axs[0].plot(ssd)\n",
