--- a/analysis/note.ipynb
+++ b/analysis/note.ipynb
@@ -30,10 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdbid = '1cukA01'\n",
-    "f = h5.File(f\"/workspace3/mdCATH_final/mdcath_dataset_{pdbid}.h5\", 'r')\n",
-    "#f = h5.File(f\"/workspace7/antoniom/noh_mdCATH/mdcath_noh_dataset_{pdbid}.h5\", 'r')\n",
-    "sim_name = '348'\n",
+    "pdbid = '1cqzB02'\n",
+    "mdcath_dir = \"/workspace3/mdcath/\"\n",
+    "h5file = opj(mdcath_dir, f\"mdcath_dataset_{pdbid}.h5\")\n",
+    "f = h5.File(h5file, 'r')\n",
+    "sim_name = '379'\n",
     "repl = '0'\n",
     "print(f'keys:{f.keys()}')\n",
     "print(f'attrs:{f.attrs[\"layout\"]}')"
@@ -405,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
