clean and update process dir

--- a/generator/process/read_info.ipynb
+++ b/generator/process/read_info.ipynb
@@ -18,6 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read the source/analysis file\n",
     "file_name = \"mdcath_analysis.h5\"\n",
     "data = h5py.File(opj(\"h5files\", file_name), \"r\")\n",
     "print(f\"Total number of samples: {len(data.keys())}\")"
@@ -29,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Specify the sample to be analyzed\n",
     "pdb = \"4i69A00\"\n",
     "temp = \"379\"\n",
     "repl = \"4\""
@@ -40,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[pdb].keys()"
+    "available_temps = list(data[pdb].keys())\n",
+    "print(f'Available temperatures: {available_temps}')"
    ]
   },
   {
@@ -59,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for temperature in [\"320\", \"348\", \"379\", \"413\", \"450\"]:\n",
+    "for temperature in available_temps:\n",
     "    print(temperature)\n",
     "    for replica in data[pdb][temperature].keys():\n",
     "        print(f\"replica {replica} --> {data[pdb][temperature][replica].attrs['numFrames']} frames\")\n",
@@ -72,7 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[pdb][temp].keys()"
+    "available_repls = list(data[pdb][temp].keys())\n",
+    "print(f'Available replicas ({temp}K): {available_repls}')"
    ]
   },
   {
@@ -82,7 +86,7 @@
    "outputs": [],
    "source": [
     "for k in data[pdb][temp][repl].attrs.keys():\n",
-    "    print(k, data[pdb][temp][repl].attrs[k])"
+    "    print(f'trajectory {pdb}/{temp}/{repl} -->', k, data[pdb][temp][repl].attrs[k])"
    ]
   },
   {
