update markdown cells

--- a/user/2_mdCATH_ML.ipynb
+++ b/user/2_mdCATH_ML.ipynb
@@ -11,8 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial provides a practical example of training ML models using the mdCATH dataset in TorchMD-Net. Before you begin, please ensure that TorchMD-Net is correctly installed. You can find installation instructions and further details [here](https://torchmd-net.readthedocs.io/en/latest/installation.html). Note that the MDCATH dataloader is available starting from TorchMD-Net version 2.4.0 and later. The next cell will write and environment file, then it's possible to create the env using the following command:\n",
-    "\n",
+    "This tutorial provides a practical example of training ML models using the mdCATH dataset in TorchMD-Net. Before you begin, please ensure that TorchMD-Net is correctly installed. You can find installation instructions and further details [here](https://torchmd-net.readthedocs.io/en/latest/installation.html). Note that the MDCATH dataloader is available starting from TorchMD-Net version 2.4.0 and later. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Execute the next cell to write an environment file, then it's possible to create a conda env using the following command:\n",
     "```bash\n",
     "mamba env create -f environment.yml\n",
     "```"
@@ -20,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing environment.yaml\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile environment.yaml\n",
     "name: torchmdnet_env\n",
